--- a/Changelog
+++ b/Changelog
@@ -2,10 +2,23 @@
 NRPE Changelog
 **************
 
-1.3 - 06/23/2001
+
+1.3 - 02/21/2002
 ----------------
-- Name change
-- Version number change
+- Name and version change
+- Ignore SIGHUP, minor cleanup (Jon Andrews)
+
+
+1.2.5 - 12/22/2001
+------------------
+- Implemented Beej's sendall() to handle partial send()s
+- Added instructions on running under xinetd to README
+- Removed some old crud
+
+
+1.2.4 - 02/22/2001
+------------------
+- I forgot what changes I made.  Go figure...
 
 
 1.2.3 - 12/21/2000
@@ -85,7 +98,7 @@ NRPE Changelog
 1.0b6 - 02/01/2000
 ------------------
 - Added configure script
-- Netutils functions from the plugins is now used
+- Netutils functions from the NetSaint plugins is now used
 - Reset SIGCHLD to default behavior before calling popen() to
   prevent race condition with pclose() (Reported by Rene Klootwijk)
 - Cleaned up code
