--- a/Changelog
+++ b/Changelog
@@ -3,7 +3,7 @@ NRPE Changelog
 **************
 
 
-1.6 - ??/??/2002
+1.6 - 12/30/2002
 ----------------
 - Updated sample commands to match new plugin argument format
 - Added sample init scripts for FreeBSD and Debian (Andrew Ryder)
@@ -11,6 +11,8 @@ NRPE Changelog
   -c option specifies config file in nrpe)
 - Added command_timeout directive to config file to allow user
   to specify timeout for executing plugins
+- Added spec file and misc patches for building RPMs (James Peterson)
+- Added --with-nrpe-port config directive (James Peterson)
 
 
 1.5 - 06/03/2002
