Updated spec file and configure script

--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,12 @@ NRPE Changelog
 **************
 
 
+1.7 - ??/??/2003
+----------------
+- Updated spec file
+- Bug fix with default nrpe port definition
+
+
 1.6 - 12/30/2002
 ----------------
 - Updated sample commands to match new plugin argument format
