--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,11 @@ NRPE Changelog
 **************
 
 
+2.1 - ??/??/2003
+----------------
+- Host names can now be specified in allowed host list
+
+
 2.0 - 09/08/2003
 ----------------
 - Added support for passing arguments to command
