--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,11 @@ NRPE Changelog
 **************
 
 
+2.3 - ??/??/2006
+---------------
+- Spec file fix
+
+
 2.2 - 01/22/2006
 ----------------
 - Spec file fix
