--- a/Changelog
+++ b/Changelog
@@ -3,11 +3,13 @@ NRPE Changelog
 **************
 
 
-2.4 - ??/??/2006
+2.4 - 02/22/2006
 ----------------
 - Added option to allow week random seed (Gerhard Lausser)
 - Added optional command line prefix (Sean Finney)
 - Added ability to reload config file with SIGHUP
+- Fixed bug with location of dh.h include file
+- Fixed bug with disconnect message in debug mode
 
 
 2.3 - 01/23/2006
