Random seed bug fix, addition of allowed_hosts variable

--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,11 @@ NRPE Changelog
 **************
 
 
+2.5 - ??/??/2006
+----------------
+- (Re)added allowed_hosts option for systems that don't support TCP wrappers
+
+
 2.4 - 02/22/2006
 ----------------
 - Added option to allow week random seed (Gerhard Lausser)
