--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,10 @@
 NRPE Changelog
 **************
 
+2.5.1 - 04/09/2006
+------------------
+- Patch to fix segfault if --no-ssl option is used (Sean Finney/Peter Palfrader)
+
 
 2.5 - 04/06/2006
 ----------------
