New installation commands, updated sample config files

--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,13 @@ NRPE Changelog
 **************
 
 
+2.8b1 - 03/??/2007
+-----------------
+- Changes to sample config files
+- Added ';' as an additional prohibited metachar for command arguments
+- Updated documentation and added easier installation commands
+
+
 2.7.1 - 03/08/2007
 ------------------
 - Changed C++ style comment to C style to fix compilation errors on AIX (Ryan McGarry)
