--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,11 @@ NRPE Changelog
 **************
 
 
+2.12 - ??/??/2008
+-----------------
+- Fix for unterminated multiline plugin (garbage) output (Krzysztof Oledzki)
+
+
 
 2.11 - 12/26/2007
 -----------------
